--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "@actions/http-client": "^2.2.1",
     "@actions/tool-cache": "^2.0.1",
     "@rigdev/sdk": "^0.0.2-dev.29",
     "js-yaml": "^4.1.0"
